--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
 .video-container {
-  margin-top: 80px;
+  margin-top: 50px;
   width: 110%;
   height: 0;
   margin-left: -10px;
@@ -10,25 +10,24 @@
  }
  
 .video-container iframe {
-position: absolute;
-top: 0;
-left: 0;
-width: 100%;
-height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 .quotes-container {
-display: flex;
-justify-content: space-between;
-width: 100%;
-margin-top: 40px;
-
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  margin-top: 40px;
 }
 
 .quote {
-width: 45%;
-margin: 10px;
-padding: 20px;
-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+  width: 45%;
+  margin: 10px;
+  padding: 20px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
 }
 
 .text{
@@ -114,19 +113,20 @@ p{
 }
 #full{
   border-color: #fc6a6a;
-  margin-top: 100px;
+  margin-top: 5px;
+  /* margin-bottom: auto; */
   content: "";
   background: linear-gradient(to right, #1C1F2A, #1C1F2A);
-  
-  position:absolute;
-  height:fit-content;
+  position: relative; /* Change to relative positioning */
+  height: fit-content;
   width: 100%;
-  left: 0vw;
+  left: 0;
+  padding-bottom: 20px;
 }
   
 #line {
-    font-weight: bold;
-    display: flex;
+  font-weight: bold;
+  display: flex;
   justify-content: center;
   margin-bottom: 0px;
   color: #FFFFFF;
@@ -134,17 +134,17 @@ p{
 #simp{
   display: flex;
   color: #FFFFFF;
-justify-content: center;
-margin-bottom: 50px;
-font-size: 16px;
-font-weight: bolder;
-font-family: 'Oxygen Mono', monospace;
-font-family: 'Poppins', sans-serif;
+  justify-content: center;
+  margin-bottom: 50px;
+  font-size: 16px;
+  font-weight: bolder;
+  font-family: 'Oxygen Mono', monospace;
+  font-family: 'Poppins', sans-serif;
   }
 
 #hea {
-    margin-top: 60px ;
-    margin-bottom: 20px;
+  padding-top: 30px ;
+  margin-bottom: 20px;
   display: flex;
   color: #FFFFFF;
   justify-content: center;
@@ -152,9 +152,9 @@ font-family: 'Poppins', sans-serif;
   font-family: 'Oxygen Mono', monospace;
   }
 .para-container {
-display: flex;
-flex-direction: row;
-align-items: flex-start;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
 }
   
 .para {
@@ -370,7 +370,7 @@ z-index: 999; /* Ensure it's above other elements */
 width: 80%;
 max-width: 600px;
 margin-top: 20px;
-margin-left: 70px;
+margin-left: 60px;
 padding: 20px;
 box-shadow: 0px 0px 10px rgba(1, 1, 1, 0.3);
 border-radius: 5px;
@@ -399,25 +399,23 @@ margin-bottom: 5px;
 
 .reginput-field {
 padding: 10px;
-padding-left: 130px;
+padding-left: 15px;
 border: 1.5px solid #ddd;
 border-radius: 7px;
-margin-left: 15px;
+margin-left: 2px;
+text-align: left;
+width: 80%;
 }
 
 .regradio-group {
 margin-top: 30px;
 margin-bottom: 20px;
 display: flex;
-gap: 55px;
-}
-
-.regradio-input {
-margin-left: 5px;
+gap: 50px;
 }
 
 .register-button {
-margin-top: 20px;
+margin-top: 10px;
 padding: 10px 20px;
 border: none;
 border-radius: 5px;
